# dev-principles

./: .gitignore  README.md
1_documentation/: README.md
1_documentation/example/: .gitignore  Dockerfile
1_documentation/example/api/: __init__.py
1_documentation/example/core/: server.py
best_practice/cicd/: README.md
best_practice/gitflow/: README.md
best_practices/api/: README.md
best_practices/cicd/: README.md  fastapi-dockercompose-workflow.yaml
best_practices/cicd/fastapi-dockercompose/: .dockerignore  .pre-commit-config.yaml  Makefile  fastapi-dockercompose-workflow.yaml
best_practices/cicd/fastapi-dockercompose/script/: check_version.sh
best_practices/cicd/react-dockercompose/: Makefile  package.json  react-dockercompose-workflow.yaml
best_practices/env/: README.md
best_practices/env/example/: .env.dev.example  .env.prod.example  .env.test.example  .gitignore
best_practices/gitflow/: README.md  general-branch-ruleset.json
code_style/: README.md
code_style/example/: README.md  bad_example.py  good_example.py  pyproject.toml
code_style/langs/python/: README.md  poetry_ruff_config.toml
documentation/: README.md
documentation/example/: .env  .env.example  Dockerfile  Makefile  Pipfile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml
documentation/example/api/: __init__.py
documentation/example/core/: __init__.py  config.py  logger.py  server.py
documentation/example/scripts/: celery.sh  start.sh
documentation/langs/: README.md
documentation/langs/python/: README.md  main.py
(+17 files in other folders)
